# thrivey-data-api

./: .dockerignore  .env_sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  app.yaml  cloudbuild.yaml  logger-conf.yaml  main.py  pyproject.toml  requirements.txt  tox.ini
app/: __init__.py  main.py  main.py_bkup  startup.py
app/db/: bq_connector.py  connection.py  model.py
app/models/: UserBehaviour.py
app/routes/: behaviour.py  user.py  user_behaviour.py  user_behaviour_json.py
app/utils/: data_generator.py  data_shuffle.py  http_error_generator.py
data/: behaviour.json  thrivey-data.csv  user.json  user_behaviour.json  user_behaviour_10000.json  user_dirty.json
postman_requests/: Thrivey-Local.postman_collection.json  Thrivey_CloudRun.postman_collection.json  Thrivey_Local.postman_collection.json
tests/: conftest.py  test_main.py
tests/interview_tests/: test_1_thrivey_merge_behaviours_initial.py  test_2_thrivey_handle_exceptions_initial.py  test_3_thrivey_pagination_inital.py  test_4_datatype_conversion_inital.py
