[tool.poetry]
name = "thrivey-api"
version = "0.1.0"
description = "A pydantic take on FastAPI"
authors = ["tim frazer <tim@littlebigthings.co>", "sean glynn <seanglynn06@hotmail.com>"]
packages = [
    { include = "app" },
    { include = "app/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
datamodel-code-generator = "^0.8.3"
bpython = "^0.21"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.26"
Faker = "^9.8.0"
pandas = "^1.3.4"
databases = "^0.5.3"
aiosqlite = "^0.17.0"
python-decouple = "^3.5"
fastapi-crudrouter = "^0.8.4"
fastapi-pagination = "^0.9.0"
google-cloud-bigquery = {version = "^2.30.1", python = "3.9.7"}
pyarrow = "^6.0.0"

[tool.poetry.dev-dependencies]
typer = "^0.3.2"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pytest = "^6.2.5"
responses = "^0.15.0"
httpx = "^0.20.0"
trio = "^0.19.0"
pytest-asyncio = "^0.16.0"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
